--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-compute/templates/ciao-compute.service.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-compute/templates/ciao-compute.service.j2
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/ciao-launcher --cacert=/etc/pki/ciao/CAcert-{{ ciao_controller_fqdn }}.pem \
+ExecStart={{ bindir }}/ciao-launcher --cacert=/etc/pki/ciao/CAcert-{{ ciao_controller_fqdn }}.pem \
                                  --cert=/etc/pki/ciao/cert-CNAgent-localhost.pem \
                                  --logtostderr -v 2
 Restart=always
