--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/ciao-scheduler.service.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/ciao-scheduler.service.j2
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/ciao-scheduler --cacert=/etc/pki/ciao/CAcert-{{ ciao_controller_fqdn }}.pem \
+ExecStart={{ bindir }}/ciao-scheduler --cacert=/etc/pki/ciao/CAcert-{{ ciao_controller_fqdn }}.pem \
                                   --cert=/etc/pki/ciao/cert-Scheduler-{{ ciao_controller_fqdn }}.pem \
                                   --logtostderr -v 2
 User=ciao
