--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/configuration.yaml.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/configuration.yaml.j2
@@ -8,6 +8,8 @@ configure:
     compute_cert: /etc/pki/keystone/keystone_key.pem
     identity_user: {{ ciao_service_user }}
     identity_password: {{ ciao_service_password }}
+  image_service:
+    url: https://{{ ciao_controller_fqdn }}:9292
   storage:
     ceph_id: {{ ceph_id }}
   launcher:
