--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/workloads/test.yaml.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/workloads/test.yaml.j2
@@ -6,5 +6,5 @@ users:
     lock-passwd: false
     passwd: $6$rounds=4096$w9I3hR4g/hu$AnYjaC2DfznbPSG3vxsgtgAS4mJwWBkcR74Y/KHNB5OsfAlA4gpU5j6CHWMOkkt9j.9d7OYJXJ4icXHzKXTAO.
     sudo: ALL=(ALL) NOPASSWD:ALL
-    ssh-authorized-keys: {{ ciao_ssh_public_key }}
+    ssh-authorized-keys: {{ ciao_guest_key }}
 ...
