--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/templates/ciao-launcher.service.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/templates/ciao-launcher.service.j2
@@ -1,11 +1,11 @@
 [Unit]
-Description=CIAO Controller Service
+Description=CIAO Launcher Service
 After=network.target
 
 [Service]
 Type=simple
 ExecStart={{ bindir }}/ciao-launcher --cacert=/etc/pki/ciao/CAcert-{{ ciao_controller_fqdn }}.pem \
-                                 --cert=/etc/pki/ciao/cert-NetworkingAgent-localhost.pem \
+                                 --cert=/etc/pki/ciao/{{ agent_key }} \
                                  --logtostderr -v 2
 Restart=always
 KillMode=process
