--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/templates/ciao-launcher.service.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/templates/ciao-launcher.service.j2
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart={{ bindir }}/ciao-launcher --cacert=/etc/pki/ciao/CAcert-{{ ciao_controller_fqdn }}.pem \
+ExecStart=/usr/local/bin/ciao-launcher --cacert=/etc/pki/ciao/CAcert-{{ ciao_controller_fqdn }}.pem \
                                  --cert=/etc/pki/ciao/{{ agent_key }} \
                                  --logtostderr -v 2
 Restart=always
