ansible: Add workaround for ansible bug #20253
There is a bug in ansible that prevents ansible_default_ipv4 to be
formatted with to_nice_yaml filter
https://github.com/ansible/ansible/issues/20253

This commit adds a workaround for the issue by using to_json | from_json
filters which are not affeceted by the bug before calling to_nice_yaml

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/configuration.yaml.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/configuration.yaml.j2
@@ -14,9 +14,9 @@ configure:
     ceph_id: {{ ceph_id }}
   launcher:
     compute_net:
-      {{ ciao_compute_subnets | to_nice_yaml }}
+      {{ ciao_compute_subnets | to_json | from_json | to_nice_yaml }}
     mgmt_net:
-      {{ ciao_mgmt_subnets | to_nice_yaml }}
+      {{ ciao_mgmt_subnets | to_json | from_json | to_nice_yaml }}
     disk_limit: true
     mem_limit: true
   identity_service:
