--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/templates/ciao-launcher.service.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-launcher/templates/ciao-launcher.service.j2
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 ExecStart=/usr/local/bin/ciao-launcher --cacert=/etc/pki/ciao/CAcert-{{ ciao_controller_fqdn }}.pem \
-                                 --cert=/etc/pki/ciao/{{ agent_key }} \
+                                 --cert=/etc/pki/ciao/{{ role_key }} \
                                  --v 3
 Restart=always
 KillMode=process
