--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/ciao-scheduler.service.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/ciao-scheduler.service.j2
@@ -3,7 +3,7 @@ Description=CIAO Scheduler Service
 After=network.target
 
 [Service]
-Type=simple
+Type=notify
 ExecStart=/usr/local/bin/ciao-scheduler --cacert=/etc/pki/ciao/CAcert-{{ ciao_controller_fqdn }}.pem \
                                   --cert=/etc/pki/ciao/cert-Scheduler-{{ ciao_controller_fqdn }}.pem \
                                   --v 3
