ansible: Run ciao-controller as ciao user
ciao-controller was run as root to allow it to run ceph commands.

By changing the ownership of /etc/ceph and its content to be owned by
ciao, ciao-controller can be run without root privileges.

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/ciao-controller.service.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-controller/templates/ciao-controller.service.j2
@@ -7,6 +7,7 @@ Type=simple
 ExecStart=/usr/local/bin/ciao-controller --cacert=/etc/pki/ciao/CAcert-{{ ciao_controller_fqdn }}.pem \
                                    --cert=/etc/pki/ciao/cert-Controller-localhost.pem \
                                    --v 3
+User=ciao
 Restart=always
 
 [Install]
