ansible: docker: Use runc runtime in ClearLinux
Use runc runtime rather than cc-oci (clear containers)
when installing in ClearLinux

Signed-off-by: Alberto Murillo Silva <alberto.murillo.silva@intel.com>

--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-webui/templates/docker-ciao-webui.service.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-webui/templates/docker-ciao-webui.service.j2
@@ -1,7 +1,7 @@
 [Unit]
 Description=CIAO WebUI Container
-Requires={{ docker_service }}
-After={{ docker_service }}
+Requires=docker.service
+After=docker.service
 
 [Service]
 Restart=always
