--- a/_DeploymentAndDistroPackaging/ansible/roles/ciao-webui/templates/docker-ciao-webui.service.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/ciao-webui/templates/docker-ciao-webui.service.j2
@@ -1,7 +1,7 @@
 [Unit]
 Description=CIAO WebUI Container
-Requires=docker.service
-After=docker.service
+Requires={{ docker_service }}
+After={{ docker_service }}
 
 [Service]
 Restart=always
