--- a/_DeploymentAndDistroPackaging/ansible/roles/keystone/templates/docker-keystone.service.j2
+++ b/_DeploymentAndDistroPackaging/ansible/roles/keystone/templates/docker-keystone.service.j2
@@ -1,7 +1,7 @@
 [Unit]
 Description=Keystone Container for CIAO
-Requires=docker.service
-After=docker.service
+Requires={{ docker_service }}
+After={{ docker_service }}
 
 [Service]
 Restart=always
